tests/files/parser_tests/should_fail/079.cmdr
//Should not parse variable
(x = 3) + 2;